# qt-collapsible-section

./: CMakeLists.txt  README.md  Section.cpp  Section.h
include/: Section.h
src/: CMakeLists.txt  Section.cpp  mainwindow.cpp
swagscanner_widgets/: CMakeLists.txt  CalibrationDropdownBasic.cpp  CalibrationDropdownBasic.h  ScanDropdownBasic.cpp  ScanDropdownBasic.h  Section.h  readme.md
swagscanner_widgets/include/: CalibrationDropdownBasic.h  ScanDropdownBasic.h
swagscanner_widgets/src/: CMakeLists.txt  Section.cpp  mainwindow.cpp
swagscanner_widgets/src/calibration/: CMakeLists.txt  CalibrationDropdownBasic.cpp
swagscanner_widgets/src/scanning/: CMakeLists.txt  ScanDropdownBasic.cpp
